fix: content alignment, #60

--- a/src/page/_about.scss
+++ b/src/page/_about.scss
@@ -10,7 +10,11 @@
 
 // our mission
 .post-112 {
-
+	.mission-row {
+		.su-column {
+			align-items: flex-start;
+		}
+	}
 }
 
 // meet the team
